# project_ai_ml

./: .gitignore  LICENSE  README.md
02-multi-agent-researcher/: .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
02-multi-agent-researcher/agent_researcher/: __init__.py  config.py  demo.py  graph.py  llm.py  nodes.py  offline_llm.py  prompts.py  search.py  state.py
02-multi-agent-researcher/sample_data/: corpus.json
02-multi-agent-researcher/tests/: test_graph.py  test_llm.py  test_nodes.py  test_search.py
03-mcp-analytics-server/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
03-mcp-analytics-server/mcp_analytics/: __init__.py  config.py  db.py  demo.py  guards.py  plotting.py  render.py  seed.py  server.py  stats.py
03-mcp-analytics-server/tests/: conftest.py  test_db.py  test_guards.py  test_integration.py  test_seed.py  test_tools.py
04-churn-prediction-pipeline/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
04-churn-prediction-pipeline/churn_pipeline/: __init__.py  api.py  config.py  data.py  demo.py  evaluate.py  explain.py  features.py  models.py  persistence.py  plots.py  schemas.py  threshold.py  train.py  tuning.py
04-churn-prediction-pipeline/docker/: entrypoint.sh
04-churn-prediction-pipeline/tests/: conftest.py  test_api.py  test_data.py  test_explain.py  test_features_and_models.py  test_threshold.py  test_train_artifacts.py
05-time-series-forecasting/: .gitignore  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
05-time-series-forecasting/docs/: energy_demand_report.html  metrics.json  retail_sales_report.html  web_traffic_report.html
05-time-series-forecasting/tests/: helpers.py  test_anomaly.py  test_backtest.py  test_conformal.py  test_data.py  test_features.py  test_metrics.py  test_models.py  test_pipeline.py
05-time-series-forecasting/ts_forecast/: __init__.py  anomaly.py  backtest.py  config.py  conformal.py  data.py  demo.py  features.py  metrics.py  pipeline.py  report.py  run.py
05-time-series-forecasting/ts_forecast/models/: __init__.py  base.py  ets.py  gbm.py  naive.py  sarima.py
06-mlops-pipeline/: .github-workflow-example.yml  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
06-mlops-pipeline/mlops_pipeline/: __init__.py  config.py  data.py  drift.py  registry.py  run_pipeline.py  simulate_drift.py  training.py  validation.py
06-mlops-pipeline/mlops_pipeline/serving/: __init__.py  app.py
06-mlops-pipeline/tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_pipeline.py  test_promotion.py  test_registry.py  test_validation.py
08-llm-finetuning-qlora/: .gitignore  Dockerfile  Dockerfile.train  Makefile  README.md  conftest.py  pyproject.toml  requirements-train.txt  requirements.txt
08-llm-finetuning-qlora/configs/: llama-3.1-8b.yaml  qwen2.5-0.5b-smoke-test.yaml
08-llm-finetuning-qlora/qlora_tune/: __init__.py  config.py  demo.py  merge.py  planning.py  train.py
08-llm-finetuning-qlora/qlora_tune/data/: __init__.py  cleaning.py  generator.py  loaders.py  records.py  splitting.py  templates.py
08-llm-finetuning-qlora/qlora_tune/evaluation/: __init__.py  harness.py  metrics.py
08-llm-finetuning-qlora/sample_data/: sample_predictions.jsonl
08-llm-finetuning-qlora/tests/: test_cleaning.py  test_config.py  test_dry_run.py  test_generator.py  test_harness.py  test_loaders.py  test_metrics.py  test_planning.py  test_splitting.py  test_templates.py
(+62 files in other folders)
