[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-researcher"
version = "1.0.0"
description = "LangGraph multi-agent research assistant with an offline-first, deterministic demo"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.4,<2.0",
    "langchain-core>=0.3,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
tavily = ["tavily-python>=0.5"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools]
packages = ["agent_researcher"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["agent_researcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    # langgraph 0.6 + langchain-core 0.3 emit this pending deprecation on import
    "ignore:The default value of",
]
