[project]
name = "mcp-analytics"
version = "1.0.0"
description = "MCP server exposing safe, read-only SQL analytics tools over a bundled SQLite database"
requires-python = ">=3.11"
dependencies = ["mcp>=1.10,<2", "matplotlib>=3.8", "pydantic>=2.5,<3"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
