[project]
name = "ts-forecast"
version = "0.1.0"
description = "Multi-model time-series forecasting with rolling-origin backtesting and conformal prediction intervals"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning", "ignore::FutureWarning"]
