[project]
name = "mlops-pipeline"
version = "1.0.0"
description = "End-to-end MLOps pipeline: validation, tracking, registry promotion, drift detection, monitored serving"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:mlflow.*"]
