[project]
name = "qlora-tune"
version = "0.1.0"
description = "QLoRA fine-tuning toolkit for instruction-tuning small LLMs on IT-helpdesk data"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
